--- a/GroupReport/GroupReport-bibfile.bib
+++ b/GroupReport/GroupReport-bibfile.bib
@@ -137,3 +137,11 @@
   note          = {Accessed: 2016-08-08},
   year          = 2016
 }
+
+ @misc{ wiki:###,
+   author = "Wikipedia",
+   title = "Sensor fusion - {W}ikipedia{,} the free encyclopedia",
+   year = "2016",
+   url = "https://en.wikipedia.org/wiki/Sensor_fusion",
+   note = "[Online; accessed 30-August-2016]"
+ }
