--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -132,9 +132,10 @@ This work was made in collaboration with Microsoft and the Guide Dogs associatio
 \section{Introduction}
 Two million people are living with visual impairment in the UK and despite that indoor environments are often not designed for this vast group of individuals in mind. ~\cite{NHSBlindStatistics} This means that the visually impaired have to depend on mobility tools to make their way around their environment. Mobility canes and guide dogs are the most important ones but are limited in their use. The canes have restricted use to a person needing to navigate from place to place, and the guide dogs are not currently available to assist all visually impaired persons in the UK. The Guide Dogs Association is working towards the goal of providing as many people with guide dogs as possible but is not able to meet the demand. The project falls under the Cities Unlocked umbrella, an initiative that was started to respond to the lack of available guide dogs in the UK ~\cite{CitiesUnlockedGeneral}. Cities Unlocked has recently been moving more towards improving and enriching the experiences of the visually impaired, rather than focusing solely on their mobility.
 
-Microsoft has been exploring different technologies that could help the visually impaired in their day to day lives and wanted to elicit the help of UCL in this exploration. A team of 8 MSc students, 4 from software systems engineering and 4 from computer science was put together, and one member was appointed as the team leader. To clarify the specific topic of the project, several brainstorming sessions were held to explore the aims and goals. The specific field of study that the clients wanted the team to explore was the use of wearable sensors that could be utilised by the visually impaired. Additionally, the clients wanted to use cheap, off the shelf, hardware and use a technique called sensor fusion to maintain accuracy. Generally speaking sensor fusion is any processing method that combines sensor readings from disparate sources into a result that has less uncertainty than the constituent sources. 
+Microsoft has been exploring different technologies that could help the visually impaired in their day to day lives and wanted to elicit the help of UCL in this exploration. A team of 8 MSc students, 4 from software systems engineering and 4 from computer science was put together, and one member was appointed as the team leader. To clarify the specific topic of the project, several brainstorming sessions were held to explore the aims and goals. The specific field of study that the clients wanted the team to explore was the use of wearable sensors that could be utilised by the visually impaired. Additionally, the clients wanted to use cheap, off the shelf, hardware and use a technique called sensor fusion to maintain accuracy~\cite{SensorFusion}. Generally speaking sensor fusion is any processing method that combines sensor readings from disparate sources into a result that has less uncertainty than the constituent sources. 
 After exploring several possible use cases for these technologies the client and the UCL team decided to find a way to improve the experience of the members of the visually impaired population when entering specific indoor environments.
 Specifically in environments that are unfamiliar to the user and that are not equipped with any particular navigation infrastructure. There has already been thorough research done on indoor navigation, but the identification of obstacles seemed to be a good fit for the hardware and technology requirements of the client.
+%TODO: Don't cite wikipedia
 
 \section{Literature review} % TODO: Change to background
 % TODO: Check if there is a difference in font size.
@@ -198,8 +199,7 @@ These were presented to the client, and he expressed interest in continuing with
 For the final project proposal, our client agreed on a research area that will help the visually impaired navigate an indoor environment.
 By using sensor fusion the team was to build a system that could collect data from various disparate sensors and identify the location of the user and obstacles in its environment.
 
-The goal is to use cheap, off-the-shelf sensors and mitigate any error in the sensor readings by correlating different readings. This will help us reduce error and increase accuracy by using sensor fusion methods.
-In order to identify the main goals of our client the team came up with scenarios and use cases, within the scope that was mentioned in section~\ref{sec:Prelim}, and presented them to the client. This was followed up by a discussion that leads to the identification of the following high level goals.
+The goal is to use cheap, off-the-shelf sensors and mitigate any error in the sensor readings by correlating different readings. This will help us reduce error and increase accuracy by using sensor fusion methods. The ones the team has selected to examine are the use of a Kalman filter, the central limit theorem and neural networks, in that order, to evaluate their applicability to the problem space. In order to identify the main goals of our client the team came up with scenarios and use cases, within the scope that was mentioned in section~\ref{sec:Prelim}, and presented them to the client. This was followed up by a discussion that leads to the identification of the following high level goals.
 
 
 The main objective was to improve the experience of the visually impaired in a specific scenario. The scenario in question involved a visually impaired individual entering a space like a coffee shop and having to navigate around obstacles like tables and chairs.
@@ -269,7 +269,7 @@ The initial implementation plan for this part of the architecture was to have th
 Concern about this structure was raised by our academic stakeholders where they wanted the SSE team to decouple their work further from the CS students. This was done by having one of the data collection application implemented by the SSE team, thereby making the SSE team responsible for a full slice through the system. Any additional data collection by the CS students would therefore be additive and not essential to the success of the project.
 
 \subsubsection{Visual obstacle detection}
-One CS student was assigned the task of exploring the use of camera feeds to detect obstacles. The main aim of the task is to determine what specific method within the wide field of computer vision might fit best for obstacle detection. The two items that stood out were stereovision, which uses two cameras separated by a set distance, to detect the distance to each point in an image and use that to determine if there is an obstacle in the path. The second is to use color detection to determine the floor area of a room and then mask out any parts of the image that are of a different colour, the masked out sections would then be identified as obstacles. The cameras were to be mounted on a headset and directed at an angle towards the ground in the direction the user was facing to detect obstacles in that area. The colour detection method provided the best results and was used to gather data for the mapping platform.
+One CS student was assigned the task of exploring the use of camera feeds to detect obstacles. The main aim of the task is to determine what specific method within the wide field of computer vision might fit best for obstacle detection. The two items that stood out were stereovision, which uses two cameras separated by a set distance, to detect the distance to each point in an image and use that to determine if there is an obstacle in the path. The second is to use colour detection to determine the floor area of a room and then mask out any parts of the image that are of a different colour, the masked out sections would then be identified as obstacles. The cameras were to be mounted on a headset and directed at an angle towards the ground in the direction the user was facing to detect obstacles in that area. The colour detection method provided the best results and was used to gather data for the mapping platform.
 
 \subsection{Ultrasound and Infrared}
 Another CS student worked on an application that polled cheap off-the-shelf infrared and ultrasound range finding sensors. These sensors would, like the computer vision cameras, make measurements of the objects in front of the user and send the readings to the obstacle mapping platform.
