--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -156,34 +156,18 @@ In light of research described in the literature reviewed the team will be able 
 
 % Add aims and goals
 % What are we building now and what are it's aims
-\section{Proposed System}
-% TODO: make a good argument for how we managed RISK
-\subsection{Preliminary work}
-\label{sec:Prelim}
-% How did we end up with our current aim
-% US sensors and why we discarded those.
 
-% Subsection this into VI obstacle detection and Sensor fusion, then bring back together.
-
-%TODO: citation 
-
-The initial plan for this project was to make use of device developed by students in the Electrical Engineering department. The hardware consists of an armband that can detect ultrasonic frequencies. Those frequencies are emitted by at least 3 beacons in strategically predefined locations in the room. The armband, in conjunction with a computer and an Android device, then triangulates the position of the armband in space.
-The former use cases to be explored focused on detecting gestures and possible indoor location possibilities. However, soon after the project was presented to the team, the hardware was found to have several limitations. The team found that the location accuracy was considerably less than what was initially described. The initial description of the hardware stated that the location accuracy was sub-centimetre, which is the theoretical minimum, but the functional accuracy was between 10 and 50 centimetres. This eliminates the gesture use case since more precision is needed to get accurate gesture recognition.
-%TODO: citation
-Furthermore, the hardware can only function if 3 beacons are within a 130\degree cone in front of the receiver. This severely limits the practicality of the device for indoor location since a wearable piece of hardware is usually blocked by the wearer's body in addition to any obstacle in the environment such as static or movable objects.
-%TODO: citation
-Therefore the high probability of getting unacceptable performance out of the hardware platform was found to cause too much risk to the project and the team mitigated that risk by pivoting the focus of the project to a different topic.
 
 \subsection{Stakeholders and Project Context}
-To identify and prioritise the goals and objectives of the SSE team first enumerated the stakeholders of the project and their desired outcomes. This would prove valuable to maintain a clear vision throughout the development process and to limit the risk of non-acceptance later on in the project.
+%To identify and prioritise the goals and objectives of the SSE team first enumerated the stakeholders of the project and their desired outcomes. This would prove valuable to maintain a clear vision throughout the development process and to limit the risk of non-acceptance later on in the project.
 
 \subsubsection{Microsoft}
 Microsoft is both the sponsor and the client in this project, in addition to that Microsoft provides the team with access to domain experts and other resources. The primary outcome that Microsoft wants from the project is research into available assistive technologies based on obstacle detection and sensor fusion. The team is therefore responsible for conducting that research, enumerating the technologies available and developing a proof of concept prototype to illustrate the possibilities of a system using them.
 Mr Jarnail Chudge is representing Microsoft and will be the team's client for the duration of the project.
 
-\subsubsection{Academic}
-The academic administrators and supervisors of this project have a specific vision for how the team should apply their knowledge to the development process and client communication.
-The outcomes the academic stakeholders are interested in are having the team maintain rigorous documentation of the project, upholding the state of the art software engineering processes and maintaining good communication with the client throughout the process.
+\subsubsection{Visually Impaired People}
+%\subsubsection{Academic}
+%The academic administrators and supervisors of this project have a specific vision for how the team should apply their knowledge to the development process and client communication.The outcomes the academic stakeholders are interested in are having the team maintain rigorous documentation of the project, upholding the state of the art software engineering processes and maintaining good communication with the client throughout the process.
 
 \subsubsection{Team members}
 The team members have a different stake in the project since they want, not only, a good mark but also a rewarding learning experience.
@@ -191,11 +175,10 @@ They want to see the project fulfilling the requirements of the other stakeholde
 To ensure a passing mark for every member of the team, the SSE team aims to minimise the overall risk of the project and put in place contingencies in the event of possible non-acceptance of the project.
 
 \subsection{High level goals}
-The team's initial contact with the client was a brainstorming session where he expressed the vision for the project. He expressed Microsoft's desire to have an end product which would feel natural to the user with very little work on the user's part regarding getting themselves familiar with the product. Then they raised the idea of using a sensor or combination of wearable sensors to achieve the ultimate goal. Ideas were then bounced around, and a subject area was found that was open for research and of value to our client.
-Microsoft Research has done some investigation into using sensor fusion and wanted to see how that technology could be utilised in aiding the visually impaired~\cite{Gear2012}.
+%The team's initial contact with the client was a brainstorming session where he expressed the vision for the project. He expressed Microsoft's desire to have an end product which would feel natural to the user with very little work on the user's part regarding getting themselves familiar with the product. Then they raised the idea of using a sensor or combination of wearable sensors to achieve the ultimate goal. Ideas were then bounced around, and a subject area was found that was open for research and of value to our client.
+%Microsoft Research has done some investigation into using sensor fusion and wanted to see how that technology could be utilised in aiding the visually impaired~\cite{Gear2012}.
 
-After the brainstorming session, the team met several times to brainstorm further and research possible applications around the sensor fusion concept and decided on a few possible project proposals.
-These were presented to the client, and he expressed interest in continuing with one of them.
+%After the brainstorming session, the team met several times to brainstorm further and research possible applications around the sensor fusion concept and decided on a few possible project proposals.These were presented to the client, and he expressed interest in continuing with one of them.
 For the final project proposal, our client agreed on a research area that will help the visually impaired navigate an indoor environment.
 By using sensor fusion the team was to build a system that could collect data from various disparate sensors and identify the location of the user and obstacles in its environment.
 
@@ -421,7 +404,37 @@ In the future, when the project needs to be expanded with other types of sensors
 Although this product can fulfil the client’s requirements, it has huge performance disparity with a real industry product. Since budget and experience are limited, the capability of the project is not sufficed to support thousands of simultaneous user query.
 This project can be migrated to Azure which is a Microsoft product and can provide global coverage and high availability and stability. The components of the project need to be rewritten in C\# and Azure analog technologies. First, Kafka part in this project should be replaced by Azure Event Hub. Next, Apache Storm consumes messages from the queue, which should be easy to do since Storm is hosted on HDInsight. Apache Storm is an alternative to Spark Streaming that has many of the same features but is built specifically for stream processing. Storm then performs the same processing as in the prototype stage and passes the result to a wide column store database. For the database, HBase is an alternative of Cassandra. When moving the project to Azure,  there will be an Asp.NET MVC REST API that queries HBase through the .NET SDK to expose the obstacles to the internet.
 
-\section{Conclusions}
+\section{Challenges and Lessons Learnt}
+\subsection{Initially Proposed System}
+\label{sec:Prelim}
+% How did we end up with our current aim
+% US sensors and why we discarded those.
+
+% Subsection this into VI obstacle detection and Sensor fusion, then bring back together.
+
+%TODO: citation 
+
+The initial plan for this project was to make use of device developed by students in the Electrical Engineering department. The hardware consists of an armband that can detect ultrasonic frequencies. Those frequencies are emitted by at least 3 beacons in strategically predefined locations in the room. The armband, in conjunction with a computer and an Android device, then triangulates the position of the armband in space.
+The former use cases to be explored focused on detecting gestures and possible indoor location possibilities. However, soon after the project was presented to the team, the hardware was found to have several limitations. The team found that the location accuracy was considerably less than what was initially described. The initial description of the hardware stated that the location accuracy was sub-centimetre, which is the theoretical minimum, but the functional accuracy was between 10 and 50 centimetres. This eliminates the gesture use case since more precision is needed to get accurate gesture recognition.
+%TODO: citation
+Furthermore, the hardware can only function if 3 beacons are within a 130\degree cone in front of the receiver. This severely limits the practicality of the device for indoor location since a wearable piece of hardware is usually blocked by the wearer's body in addition to any obstacle in the environment such as static or movable objects.
+%TODO: citation
+Therefore the high probability of getting unacceptable performance out of the hardware platform was found to cause too much risk to the project and the team mitigated that risk by pivoting the focus of the project to a different topic.
+
+\subsection{Testing with Real Data}
+
+\subsection{Memory Shortage}
+
+\subsection{Completing Tasks in Sprints}
+
+\subsection{UDP over TCP}
+
+\subsection{Java over Scala}
+
+\subsection{Combining Streams}
+\textcolor{red}{vesko??}
+
+\section{Conclusion}
 
 % TODO: identify the topic takeaway messages.
 % takeaway messages describe how we one could do things differently.
