--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -130,12 +130,8 @@ This work was made in collaboration with Microsoft and the Guide Dogs associatio
 \maketitle
 
 \section{Introduction}
-Two million people are living with visual impairment in the UK and despite that indoor environments are often not designed for this vast group of individuals in mind. ~\cite{NHSBlindStatistics} This means that the visually impaired have to depend on mobility tools to make their way around their environment. Mobility canes and guide dogs are the most important ones but are limited in their use. The canes have restricted use to a person needing to navigate from place to place, and the guide dogs are not currently available to assist all visually impaired persons in the UK. The Guide Dogs Association is working towards the goal of providing as many people with guide dogs as possible but is not able to meet the demand. The project falls under the Cities Unlocked umbrella, an initiative that was started to respond to the lack of available guide dogs in the UK ~\cite{CitiesUnlockedGeneral}. Cities Unlocked has recently been moving more towards improving and enriching the experiences of the visually impaired, rather than focusing solely on their mobility.
-
-Microsoft has been exploring different technologies that could help the visually impaired in their day to day lives and wanted to elicit the help of UCL in this exploration. A team of 8 MSc students, 4 from software systems engineering and 4 from computer science was put together, and one member was appointed as the team leader. To clarify the specific topic of the project, several brainstorming sessions were held to explore the aims and goals. The specific field of study that the clients wanted the team to explore was the use of wearable sensors that could be utilised by the visually impaired. Additionally, the clients wanted to use cheap, off the shelf, hardware and use a technique called sensor fusion to maintain accuracy~\cite{SensorFusion}. Generally speaking sensor fusion is any processing method that combines sensor readings from disparate sources into a result that has less uncertainty than the constituent sources. 
-After exploring several possible use cases for these technologies the client and the UCL team decided to find a way to improve the experience of the members of the visually impaired population when entering specific indoor environments.
-Specifically in environments that are unfamiliar to the user and that are not equipped with any particular navigation infrastructure. There has already been thorough research done on indoor navigation, but the identification of obstacles seemed to be a good fit for the hardware and technology requirements of the client.
-%TODO: Don't cite wikipedia
+Two million people are living with visual impairment in the UK and despite that indoor environment are often not designed for this vast of individuals in mind. This situation leads to a terrible experience of the visually impaired when they move around without depending on others. Mobility canes and guide dogs work for this case but are limited in their use. The canes have restricted use to a person needing to navigate from place to place, and the guide dogs are not currently available to assist all visually impaired persons in the UK. Also, the available navigation application cannot show the dynamic barriers in the way.Therefore, an easily available solution which can provide real-time assistance in an indoor environment for visually impaired people is highly needed. The Lighthouse team was working with Microsoft, which is both the sponsor and client of this project and who wanted the team to use wearable sensors which are low-cost and off the shelf.To solve the problem mentioned above, the team designed to build a platform which can process the data of the environment collected by sensors and give the user feedback about their surroundings, such as where they are and if there are obstacles nearby or not. When the user is entering an indoor environment, the platform achieves the dynamic obstacle mapping by processing the data collected by Android phone and wearable sensors, and the real-time details of the environment will be shown to users.
+By cooperation of 8 MSc students in Lighthouse team, one data transfer API, one processing platform and an Android application were delivered. The API provide the communication between sensors and processing platform which generate the data collected with sensor fusion method and store result to the database. The Android application gives user feedback of surroundings by querying the database and showing the result on the map.The Lighthouse platform reached the accuracy within one meter and controlled the latency to an acceptable range. The Lighthouse project not only solves the indoor dynamic obstacle mapping challenge but also makes it possible for visually impaired users to explore unfamiliar environments.
 
 \section{Literature review} % TODO: Change to background
 % TODO: Check if there is a difference in font size.
